Fix warnings#